[project]
name = "pun-calculator"
version = "1.0.0"
description = "Project to calculate the PUN value for a given date range divided in F1, F2 and F3."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "holidays>=0.93",
    "matplotlib>=3.10.8",
    "openpyxl>=3.1.5",
    "pandas>=3.0.1",
]
